@@ -1,3 +1,7 @@
+* 2012-08-27 - thorben.betten@open-xchange.com
+
+ - Fix for bug 22755: Proper Content-Disposition header when downloading a file with Safari
+
 * 2012-08-24 - jan.bauerdick@open-xchange.com
 
  - Fix for bug 22838: New implementation of com.openexchange.sessiond.impl.SessionHandler.merge
